--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="app_name">Kalc</string>
     <string name="_7">7</string>
     <string name="_8">8</string>
     <string name="_9">9</string>
@@ -16,4 +17,8 @@
     <string name="_0">0</string>
     <string name="div">/</string>
     <string name="eq">=</string>
+    <string name="percent">%</string>
+    <string name="del">del</string>
+    <string name="AC">AC</string>
+    <string name="full">чтотвал</string>
 </resources>
