--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,9 @@
     <string name="_0">0</string>
     <string name="div">/</string>
     <string name="eq">=</string>
+    <string name="percent">%</string>
+    <string name="del">del</string>
+    <string name="AC">AC</string>
+    <string name="full">чтотвал</string>
+
 </resources>
