Корректное вычисление операций с процентами

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,6 @@
     <string name="percent">%</string>
     <string name="del">del</string>
     <string name="AC">AC</string>
-    <string name="full">чтотвал</string>
+    <string name="full"> </string>
 
 </resources>
